# VASSTAlgorithms

./: CMakeLists.txt  README.md
CalibrationAlgo/Logic/: CMakeLists.txt
CalibrationAlgo/Logic/Testing/Cxx/: CMakeLists.txt  vtkSlicerCalibrationAlgoLogicTest1.cxx
LinesIntersection/: CMakeLists.txt  qSlicerLinesIntersectionModule.cxx  qSlicerLinesIntersectionModule.h  qSlicerLinesIntersectionModuleWidget.cxx  qSlicerLinesIntersectionModuleWidget.h
LinesIntersection/Logic/: CMakeLists.txt  vtkSlicerLinesIntersectionLogic.cxx  vtkSlicerLinesIntersectionLogic.h
LinesIntersection/Logic/Testing/Cxx/: CMakeLists.txt  vtkSlicerLinesIntersectionLogicTest1.cxx
LinesIntersection/Resources/: qSlicerLinesIntersectionModule.qrc
LinesIntersection/Resources/UI/: qSlicerLinesIntersectionModuleWidget.ui
PointToLineRegistration/: CMakeLists.txt  qSlicerPointToLineRegistrationModule.cxx  qSlicerPointToLineRegistrationModule.h  qSlicerPointToLineRegistrationModuleWidget.cxx  qSlicerPointToLineRegistrationModuleWidget.h
PointToLineRegistration/Logic/: vtkPointToLineRegistration.cpp  vtkPointToLineRegistration.h  vtkSlicerPointToLineRegistrationLogic.cxx  vtkSlicerPointToLineRegistrationLogic.h
PointToLineRegistration/Logic/Testing/Cxx/: CMakeLists.txt  vtkSlicerPointToLineRegistrationLogicTest1.cxx
PointToLineRegistration/Logic/Testing/Cxx/Data/: point_to_line_sample.txt
PointToLineRegistration/Resources/UI/: qSlicerPointToLineRegistrationModuleWidget.ui
